Time: 21 ms (41.65%) | Memory: 45.4 MB (95.16%) - LeetSync